# CppND-Hot-Dog-Detector

./: CMakeLists.txt  README.md
src/: main.cpp
